# Hackathon-2-Phase-02

./: README.md
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  models.py
backend/app/routes/: tasks.py
frontend/: package-lock.json  package.json
frontend/app/auth/login/: page.tsx
frontend/app/components/: Footer.tsx  UIComponents.tsx
frontend/app/components/features/: page.tsx
frontend/src/lib/: auth.ts
